# constellation

./: .dockerignore  .editorconfig  .mergify.yml  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  README.md  TESTING.md  azure-pipelines.yml  build.rs  docker-compose.test.yml  docker.test.yml  k8s.yaml
.circleci/: config.yml
.github/: dependabot.yml
common/: Cargo.toml
common/src/: lib.rs
constellation-internal/: Cargo.toml
constellation-internal/src/: ext.rs  format.rs  lib.rs  msg.rs  units.rs
deploy/: Cargo.toml
deploy/src/: alloc.rs  lib.rs
deploy/src/channel/: circular_buffer.rs  circularbuffer.rs  heap.rs  mod.rs  serialize.rs  tcp_linux.rs
examples/: Cargo.toml  README.md  all_to_all.rs  fibonacci.rs  fork_join.rs  process_pool.rs
fabric/: Cargo.toml  README.md
fabric/src/: main.rs  scheduler.rs
src/: deploy.rs  lib.rs
src/channel/: inner.rs  inner_states.rs  mod.rs
test/: Cargo.toml
test/src/: ext.rs  main.rs
tests/: a.rs  abort-sleep.rs  abort.rs  b.rs  c.rs  d.rs  e.rs  f.rs  failure-sleep.rs  failure.rs  g.rs  h.rs  i.rs  j.rs  k.rs  l.rs  m.rs  message-alltoall-sleep.rs  n.rs  o.rs  output-data.rs  p.rs  q.rs  r.rs  resource-limit-stress.rs  resource-limit.rs  resources.rs  s.rs  sender-duplicate.rs  sender-self.rs  spawn-env.rs  spawn-multiple-futures-send-recv-stream.rs  spawn-multiple-send-recv-recv-send-sleep.rs  spawn-multiple-send-recv-recv-send.rs  spawn-multiple-send-recv-stream.rs  spawn-multiple-send-recv.rs  spawn-multiple-sleep.rs  spawn-receiver-sender.rs  spawn-receiver.rs  spawn-recv.rs  (+19 more)
tests/tester/: ext.rs  main.rs
