[workspace]

[package]
name = "constellation-rs"
version = "0.1.1"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","network-programming","concurrency","asynchronous","command-line-utilities"]
keywords = ["constellation","deploy","distributed","cluster"]
description = """
Constellation is a framework for Rust (nightly) that aides in the writing, debugging and deployment of distributed programs.
"""
repository = "https://github.com/alecmocatta/constellation"
homepage = "https://github.com/alecmocatta/constellation"
documentation = "https://docs.rs/constellation-rs/0.1.1"
readme = "README.md"
edition = "2018"
autotests = true

[lib]
name = "constellation"

[badges]
azure-devops = { project = "alecmocatta/constellation", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[features]
fringe = ["serde_pipe/fringe"]
no_alloc = ["constellation-internal/no_alloc"]
nightly = ["palaver/nightly", "relative/nightly"]

[dependencies]
constellation-internal = { path = "constellation-internal", version = "=0.1.1" }
atty = "0.2"
backtrace = "0.3"
bincode = "1.0"
crossbeam = "0.7"
docopt = "1.0"
either = "1.5"
futures-preview = "=0.3.0-alpha.17"
log = "0.4"
more-asserts = "0.2"
notifier = { version = "0.1", features = ["tcp_typed"] }
once_cell = { version = "0.2", default-features = false }
palaver = "0.2"
pin-utils = "0.1.0-alpha.4"
rand = "0.7"
relative = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.1"
serde_json = "1.0"
serde_pipe = "0.1"
tcp_typed = "0.1"
toml = "0.5"

[target.'cfg(unix)'.dependencies]
nix = "0.15"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
escargot = "0.5"
hex = "0.3"
itertools = "0.8"
multiset = "0.0"
regex = "1.0"
serde_traitobject = "0.1"
sha1 = "0.6"
systemstat = "0.1"

[patch.crates-io]
# bincode = { git = "https://github.com/alecmocatta/bincode" }
systemstat = { git = "https://github.com/alecmocatta/systemstat" }
serde_traitobject = { git = "https://github.com/alecmocatta/serde_traitobject", branch = "ergo-impls" }

# Hopefully we won't need to exhaustively list in future:
# https://github.com/rust-lang/cargo/issues/5766 or https://github.com/rust-lang/rust/issues/50297

[[test]]
name = "tester"
harness = false

[[test]]
name = "a"
harness = false
[[test]]
name = "b"
harness = false
[[test]]
name = "c"
harness = false
[[test]]
name = "d"
harness = false
[[test]]
name = "e"
harness = false
[[test]]
name = "f"
harness = false
[[test]]
name = "g"
harness = false
[[test]]
name = "h"
harness = false
[[test]]
name = "i"
harness = false
[[test]]
name = "j"
harness = false
[[test]]
name = "k"
harness = false
[[test]]
name = "l"
harness = false
[[test]]
name = "m"
harness = false
[[test]]
name = "n"
harness = false
[[test]]
name = "o"
harness = false
[[test]]
name = "p"
harness = false
[[test]]
name = "q"
harness = false
[[test]]
name = "r"
harness = false
[[test]]
name = "s"
harness = false
[[test]]
name = "t"
harness = false
[[test]]
name = "u"
harness = false
[[test]]
name = "v"
harness = false
[[test]]
name = "w"
harness = false
[[test]]
name = "x"
harness = false
[[test]]
name = "xx"
harness = false
[[test]]
name = "y"
harness = false
[[test]]
name = "z"
harness = false
