[workspace]

[package]
name = "constellation-rs"
version = "0.1.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","network-programming","concurrency","asynchronous","command-line-utilities"]
keywords = ["constellation","deploy","distributed","cluster"]
description = """
Constellation is a framework for Rust (nightly) that aides in the writing, debugging and deployment of distributed programs.
"""
repository = "https://github.com/alecmocatta/constellation"
homepage = "https://github.com/alecmocatta/constellation"
documentation = "https://docs.rs/constellation-rs/0.1.2"
readme = "README.md"
edition = "2018"
autotests = true

[lib]
name = "constellation"

[badges]
azure-devops = { project = "alecmocatta/constellation", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[features]
default = ["distribute_binaries"]
nightly = ["palaver/nightly", "relative/nightly"]
distribute_binaries = ["constellation-internal/distribute_binaries"]
fringe = ["serde_pipe/fringe"]
no_alloc = ["constellation-internal/no_alloc"]

[dependencies]
constellation-internal = { path = "constellation-internal", version = "=0.1.2" }
atty = "0.2"
backtrace = "0.3"
bincode = "1.0"
crossbeam = "0.7"
docopt = "1.0"
either = "1.5"
futures-preview = "0.3.0-alpha.18"
log = "0.4"
notifier = { version = "0.1", features = ["tcp_typed"] }
once_cell = { version = "0.2", default-features = false }
palaver = "0.2.8"
pin-utils = "0.1.0-alpha.4"
rand = "0.7"
relative = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.1"
serde_json = "1.0"
serde_pipe = "0.1"
tcp_typed = "0.1"
toml = "0.5"

[target.'cfg(unix)'.dependencies]
nix = "0.15"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
escargot = "0.5"
hex = "0.3"
itertools = "0.8"
multiset = "0.0"
regex = "1.0"
serde_traitobject = "0.1"
sha1 = "0.6"
systemstat = "0.1"

[patch.crates-io]
serde_traitobject = { git = "https://github.com/alecmocatta/serde_traitobject", branch = "ergo-impls" }
systemstat = { git = "https://github.com/alecmocatta/systemstat" }

# Hopefully we won't need to exhaustively list in future:
# https://github.com/rust-lang/cargo/issues/5766 or https://github.com/rust-lang/rust/issues/50297

[[test]]
name = "tester"
harness = false

[[test]]
name = "abort-sleep"
harness = false
[[test]]
name = "abort"
harness = false
[[test]]
name = "failure-sleep"
harness = false
[[test]]
name = "failure"
harness = false
[[test]]
name = "message-alltoall-sleep"
harness = false
[[test]]
name = "output-data"
harness = false
[[test]]
name = "resources"
harness = false
[[test]]
name = "sender-duplicate"
harness = false
[[test]]
name = "sender-self"
harness = false
[[test]]
name = "spawn-multiple-futures-send-recv-stream"
harness = false
[[test]]
name = "spawn-multiple-send-recv-recv-send-sleep"
harness = false
[[test]]
name = "spawn-multiple-send-recv-recv-send"
harness = false
[[test]]
name = "spawn-multiple-send-recv-stream"
harness = false
[[test]]
name = "spawn-multiple-send-recv"
harness = false
[[test]]
name = "spawn-multiple-sleep"
harness = false
[[test]]
name = "spawn-receiver-sender"
harness = false
[[test]]
name = "spawn-receiver"
harness = false
[[test]]
name = "spawn-recv"
harness = false
[[test]]
name = "spawn-send-recv"
harness = false
[[test]]
name = "spawn-send"
harness = false
[[test]]
name = "spawn-sender-receiver"
harness = false
[[test]]
name = "spawn-sender"
harness = false
[[test]]
name = "spawn"
harness = false
[[test]]
name = "success-return-sleep"
harness = false
[[test]]
name = "success-return"
harness = false
[[test]]
name = "success-sleep"
harness = false
[[test]]
name = "success"
harness = false
