[package]
name = "deploy-common"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","network-programming","concurrency","asynchronous"]
keywords = ["deploy","distributed","fabric"]
description = """
Common components for the `deploy` and `fabric` crates.
"""
repository = "https://github.com/alecmocatta/deploy"
homepage = "https://github.com/alecmocatta/deploy"
documentation = "https://docs.rs/deploy"

[dependencies]
serde_derive = "1.0.59"
serde = "1.0.59"
serde_json = "1.0"
aes_frast = "0.1"
either = {version = "1.5", features = ["serde"]}
nix = "0.11"
ansi_term = "0.11"
rand = "0.5"
bincode = "1.0"

# fixes for cargo update -Z minimal-versions
cfg-if = "0.1.2"
proc-macro2 = "0.4.3"
