[package]
name = "constellation-internal"
version = "0.1.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","network-programming","concurrency","asynchronous"]
keywords = ["constellation","deploy","distributed","cluster"]
description = """
Common components for the `constellation` framework.
"""
repository = "https://github.com/alecmocatta/constellation"
homepage = "https://github.com/alecmocatta/constellation"
documentation = "https://docs.rs/constellation-rs"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes_frast = "0.1"
either = { version = "1.5", features = ["serde"] }
ansi_term = "0.12"
rand = { version = "0.7", features = ["small_rng"] }
bincode = "1.0"
cargo_metadata = { version = "0.8", default-features = false }
alloc_counter = { optional = true, version = "0.0", default-features = false, features = ["std", "no_alloc"] }

[target.'cfg(unix)'.dependencies]
nix = "0.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [] }
