[package]
name = "examples"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["network-programming","concurrency","asynchronous","command-line-utilities"]
keywords = ["deploy","distributed","fabric"]
description = """
A collection of simple examples leveraging `deploy`.
"""
repository = "https://github.com/alecmocatta/deploy"
homepage = "https://github.com/alecmocatta/deploy"
documentation = "https://docs.rs/deploy"

[dependencies]
deploy = {path = "../deploy", version = "=0.1.0"}
serde_derive = "1.0"
serde = "1.0"
