[package]
name = "test"
version = "0.1.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","network-programming","concurrency","asynchronous","command-line-utilities"]
keywords = ["deploy","distributed","fabric"]
description = """
Test suite for `deploy` crate.
"""
repository = "https://github.com/alecmocatta/deploy"
homepage = "https://github.com/alecmocatta/deploy"
documentation = "https://docs.rs/deploy"
readme = "../TESTING.md"

[dependencies]
deploy-common = {path = "../common"}
deploy = {path = "../deploy"}
multiset = {git = "https://github.com/jmitchell/multiset", rev = "0fd00e5e"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
itertools = "0.7"
either = {version = "1.5", features = ["serde"]}
regex = "1.0"
futures-preview = "0.2"
nix = "0.11"
